--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,5 +1,5 @@
 <h3>Blog Angular2</h3>
 
-<div *ngFor="let post of posts">
-  {{post}}
+<div *ngFor="let thing of things">
+  {{thing.title}} - {{thing.body}} - {{thing.time_created}}
 </div>
